--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -624,7 +624,7 @@
 %   \end{texnote}
 % \end{function}
 %
-% \begin{function}[added = 2017-11-28]
+% \begin{function}[added = 2017-11-28, updated = 2019-08-25]
 %   {
 %     \prop_set_from_keyval:Nn, \prop_set_from_keyval:cn,
 %     \prop_gset_from_keyval:Nn, \prop_gset_from_keyval:cn,
@@ -637,10 +637,10 @@
 %       \}
 %   \end{syntax}
 %   Sets \meta{prop~var} to contain key--value pairs given in the second
-%   argument.
+%   argument.  If duplicate keys appear only one of the values is kept.
 % \end{function}
 %
-% \begin{function}[added = 2017-11-28]
+% \begin{function}[added = 2017-11-28, updated = 2019-08-25]
 %   {\prop_const_from_keyval:Nn, \prop_const_from_keyval:cn}
 %   \begin{syntax}
 %     \cs{prop_const_from_keyval:Nn} \meta{prop~var}
@@ -652,6 +652,7 @@
 %   Creates a new constant \meta{prop~var} or raises an error if the
 %   name is already taken. The \meta{prop~var} is set globally to
 %   contain key--value pairs given in the second argument.
+%   If duplicate keys appear only one of the values is kept.
 % \end{function}
 %
 % \section{Additions to \pkg{l3seq}}
