--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -368,6 +368,24 @@
 %   should not be relied upon.
 % \end{function}
 %
+% \begin{function}[rEXP]
+%   {\prop_map_tokens:Nn, \prop_map_tokens:cn}
+%   \begin{syntax}
+%     \cs{prop_map_tokens:Nn} \meta{property list} \Arg{code}
+%   \end{syntax}
+%   Analogue of \cs{prop_map_function:NN} which maps several tokens
+%   instead of a single function.  The \meta{code} receives each
+%   key--value pair in the \meta{property list} as two trailing brace
+%   groups. For instance,
+%   \begin{verbatim}
+%     \prop_map_tokens:Nn \l_my_prop { \str_if_eq:nnT { mykey } }
+%   \end{verbatim}
+%   expands to the value corresponding to \texttt{mykey}: for each
+%   pair in |\l_my_prop| the function \cs{str_if_eq:nnT} receives
+%   \texttt{mykey}, the \meta{key} and the \meta{value} as its three
+%   arguments.  For that specific task, \cs{prop_item:Nn} is faster.
+% \end{function}
+%
 % \begin{function}[updated = 2012-06-29, rEXP]{\prop_map_break:}
 %   \begin{syntax}
 %     \cs{prop_map_break:}
@@ -1214,6 +1232,34 @@
 \cs_generate_variant:Nn \prop_map_inline:Nn { c }
 %    \end{macrocode}
 % \end{macro}
+%
+% \begin{macro}[rEXP]{\prop_map_tokens:Nn, \prop_map_tokens:cn}
+% \begin{macro}{\@@_map_tokens:nwwn}
+%   The mapping is very similar to \cs{prop_map_function:NN}.  The
+%   \cs{use_i:nn} removes the leading \cs{s_@@}.  The odd construction
+%   |\use:n {#1}| allows |#1| to contain any token without interfering
+%   with \cs{prop_map_break:}.  The loop stops when the argument
+%   delimited by \cs{@@_pair:wn} is \cs{prg_break:} instead of being
+%   empty.
+%    \begin{macrocode}
+\cs_new:Npn \prop_map_tokens:Nn #1#2
+  {
+    \exp_last_unbraced:Nno
+      \use_i:nn { \@@_map_tokens:nwwn {#2} } #1
+      \prg_break: \@@_pair:wn \s_@@ { } \prg_break_point:
+    \prg_break_point:Nn \prop_map_break: { }
+  }
+\cs_new:Npn \@@_map_tokens:nwwn #1#2 \@@_pair:wn #3 \s_@@ #4
+  {
+    #2
+    \use:n {#1} {#3} {#4}
+    \@@_map_tokens:nwwn {#1}
+  }
+\cs_generate_variant:Nn \prop_map_tokens:Nn { c }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
 %
 % \begin{macro}[tested = m3prop003]{\prop_map_break:}
 % \begin{macro}[tested = m3prop003]{\prop_map_break:n}
