Minor indexing and doc fixes

--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -1153,6 +1153,7 @@ and all files in that bundle must be distributed together.
         { n } { n }
         { o } { n }
         { f } { n }
+        { e } { n }
         { x } { n }
         { V } { n }
         { v } { n }
@@ -1258,7 +1259,9 @@ and all files in that bundle must be distributed together.
     \bool_if:NT #3
       {
         \token_to_str:N :
-        \str_if_eq:nnTF { #1 ~ } { \exp_args }
+        \bool_lazy_or:nnTF
+            { \str_if_eq_p:nn { #1 ~ } { \exp_args } }
+            { \str_if_eq_p:nn { #1 ~ } { \exp_last_unbraced } }
           { \exp_not:n {#2} }
           { \@@_signature_base_form:n {#2} }
       }
