--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -656,7 +656,7 @@
 %     \cs{regex_replace_all:nnN} \Arg{regular expression} \Arg{replacement} \meta{tl~var}
 %     \cs{regex_replace_all:nnNTF} \Arg{regular expression} \Arg{replacement} \meta{tl~var} \Arg{true code} \Arg{false code}
 %   \end{syntax}
-%   Replaces all occurrences of the \cs{regular expression} in the
+%   Replaces all occurrences of the \meta{regular expression} in the
 %   \meta{token list} by the \meta{replacement}, where |\0| represents
 %   the full match, |\1| represent the contents of the first capturing
 %   group, |\2| of the second, \emph{etc.} Every match is treated
@@ -697,7 +697,7 @@
 %     non-implemented syntax.
 %   \item Test for the maximum register \cs{c_max_register_int}.
 %   \item Find out whether the fact that |\W| and friends match the
-%     end-marker leads to bugs. Possibly update \cs{__regex_item_reverse:n}.
+%     end-marker leads to bugs. Possibly update \cs[no-index]{__regex_item_reverse:n}.
 %   \item The empty cs should be matched by |\c{}|, not by
 %     |\c{csname.?endcsname\s?}|.
 % \end{itemize}
@@ -709,21 +709,21 @@
 %   \item Only build |\c{...}| once.
 %   \item Use arrays for the left and right state stacks when
 %     compiling a regex.
-%   \item Should \cs{__regex_action_free_group:n} only be used for greedy
+%   \item Should \cs[no-index]{__regex_action_free_group:n} only be used for greedy
 %     |{n,}| quantifier? (I think not.)
 %   \item Quantifiers for |\u| and assertions.
 %   \item When matching, keep track of an explicit stack of
 %     \texttt{current_state} and \texttt{current_submatches}.
 %   \item If possible, when a state is reused by the same thread, kill
 %     other subthreads.
-%   \item Use an array rather than \cs{l__regex_balance_tl}
-%     to build the function \cs{__regex_replacement_balance_one_match:n}.
+%   \item Use an array rather than \cs[no-index]{l__regex_balance_tl}
+%     to build the function \cs[no-index]{__regex_replacement_balance_one_match:n}.
 %   \item Reduce the number of epsilon-transitions in alternatives.
 %   \item Optimize simple strings: use less states (|abcade| should give
 %     two states, for |abc| and |ade|). [Does that really make sense?]
 %   \item Optimize groups with no alternative.
-%   \item Optimize states with a single \cs{__regex_action_free:n}.
-%   \item Optimize the use of \cs{__regex_action_success:} by inserting it
+%   \item Optimize states with a single \cs[no-index]{__regex_action_free:n}.
+%   \item Optimize the use of \cs[no-index]{__regex_action_success:} by inserting it
 %     in state $2$ directly instead of having an extra transition.
 %   \item Optimize the use of \cs{int_step_...} functions.
 %   \item Groups don't capture within regexes for csnames; optimize and
