Fix typo in documentation [ci skip]

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -992,7 +992,7 @@
 %
 % \begin{function}[EXP, added = 2019-06-02]{\use_ii_i:nn}
 %   \begin{syntax}
-%     \cs{use_ii_i:nnn} \Arg{arg_1} \Arg{arg_2}
+%     \cs{use_ii_i:nn} \Arg{arg_1} \Arg{arg_2}
 %   \end{syntax}
 %   This function absorbs two arguments and leaves the content of the
 %   second and first in the input stream. The category code of
