--- a/l3backend/l3backend-pdf.dtx
+++ b/l3backend/l3backend-pdf.dtx
@@ -180,7 +180,7 @@
   }
 \cs_new_protected:Npn \@@_backend_object_write_stream:nnn #1#2#3
   {
-    \@@_postscript:n
+    \__kernel_backend_postscript:n
       {
         [nobreak]
         mark ~ #1 ~ ( #3 ) /PUT ~ pdfmark ~
