--- a/l3backend/l3backend-draw.dtx
+++ b/l3backend/l3backend-draw.dtx
@@ -393,7 +393,7 @@
 \cs_new_protected:Npn \@@_backend_color_fill:n #1
   { 
     \__kernel_backend_postscript:n
-      { SDict ~ begin ~ /color.fc ~ { #1 } ~ def ~ end }
+      { /color.fc ~ { #1 } ~ def }
   }
 \cs_generate_variant:Nn \@@_backend_color_fill:n { x }
 \cs_new_protected:Npn \@@_backend_color_stroke:n #1
