--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -551,6 +551,25 @@
 %   receives the \meta{item} as |#1|. See also \cs{tl_map_function:nN}.
 % \end{function}
 %
+% \begin{function}[rEXP, added = 2019-09-02]
+%   {\tl_map_tokens:Nn, \tl_map_tokens:cn, \tl_map_tokens:nn}
+%   \begin{syntax}
+%     \cs{tl_map_tokens:Nn} \meta{tl~var} \Arg{code}
+%     \cs{tl_map_tokens:nn} \meta{tokens} \Arg{code}
+%   \end{syntax}
+%   Analogue of \cs{tl_map_function:NN} which maps several tokens
+%   instead of a single function.  The \meta{code} receives each item in
+%   the \meta{tl~var} or \meta{tokens} as two trailing brace groups. For
+%   instance,
+%   \begin{verbatim}
+%     \tl_map_tokens:Nn \l_my_tl { \prg_replicate:nn { 2 } }
+%   \end{verbatim}
+%   expands to twice each item in the \meta{sequence}: for each item in
+%   |\l_my_tl| the function \cs{prg_replicate:nn} receives |2| and
+%   \meta{item} as its two arguments.  The function
+%   \cs{tl_map_inline:Nn} is typically faster but is not expandable.
+% \end{function}
+%
 % \begin{function}[updated = 2012-06-29]
 %   {\tl_map_variable:NNn, \tl_map_variable:cNn}
 %   \begin{syntax}
@@ -2405,6 +2424,31 @@
   { \exp_args:No \tl_map_inline:nn }
 \cs_generate_variant:Nn \tl_map_inline:Nn { c }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\tl_map_tokens:nn}
+% \begin{macro}{\tl_map_tokens:Nn, \tl_map_tokens:cn}
+% \begin{macro}{\@@_map_tokens:nn}
+%   Much like the function mapping.
+%    \begin{macrocode}
+\cs_new:Npn \tl_map_tokens:nn #1#2
+  {
+    \@@_map_tokens:nn {#2} #1
+      \q_recursion_tail
+    \prg_break_point:Nn \tl_map_break: { }
+  }
+\cs_new:Npn \tl_map_tokens:Nn
+  { \exp_args:No \tl_map_tokens:nn }
+\cs_generate_variant:Nn \tl_map_tokens:Nn { c }
+\cs_new:Npn \@@_map_tokens:nn #1#2
+  {
+    \quark_if_recursion_tail_break:nN {#2} \tl_map_break:
+    \use:n {#1} {#2}
+    \@@_map_tokens:nn {#1}
+  }
+%    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 %
