--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -625,6 +625,19 @@
 %   \cs{q_no_value} in the case that the file does not exist.
 % \end{function}
 %
+% \begin{function}[added = 2019-09-03, EXP]{\file_full_name:n, \file_full_name:V}
+%   \begin{syntax}
+%     \cs{file_full_name:n} \Arg{file name}
+%   \end{syntax}
+%   Searches for \meta{file name} in the path as detailed for
+%   \cs{file_if_exist:nTF}, and if found leaves the
+%   fully-qualified name of the file, \emph{i.e.}~the path and file name,
+%   in the input stream.
+%   This includes an extension |.tex| when the given \meta{file name}
+%   has no extension but the file found has that extension.
+%   If the file is not found on the path, the expansion is empty.
+% \end{function}
+%
 % \begin{function}[added = 2017-06-23, updated = 2017-06-26]
 %   {\file_parse_full_name:nNNN, \file_parse_full_name:VNNN}
 %   \begin{syntax}
@@ -2436,18 +2449,157 @@
 % \end{macro}
 % \end{macro}
 %
+% \begin{macro}{\@@_file_size:n}
+%   A copy of the primitive where it's available, or the \LuaTeX{}
+%   equivalent if relevant.
+%    \begin{macrocode}
+\cs_new_eq:NN \@@_file_size:n \tex_filesize:D
+\sys_if_engine_luatex:T
+  {
+    \cs_gset:Npn \@@_file_size:n #1
+      {
+        \lua_now:e
+          {
+            l3kernel.filesize
+              ( " \lua_escape:e {#1} " )
+          }
+      }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[rEXP]{\file_full_name:n, \@@_full_name:n}
+% \begin{macro}[rEXP]{\@@_full_name:nn}
+% \begin{macro}[rEXP]{\@@_full_name_aux:nn}
+% \begin{macro}[rEXP]{\@@_full_name_aux:n}
+% \begin{macro}[rEXP]{\@@_file_name_cleanup:w}
+% \begin{macro}[rEXP]{\@@_file_name_end:}
+% \begin{macro}[rEXP]{\@@_file_name_ext_check:n}
+% \begin{macro}[rEXP]
+%   {
+%     \@@_file_name_ext_check_auxi:nw  ,
+%     \@@_file_name_ext_check_auxii:nw ,
+%     \@@_file_name_ext_check_auxiii:nw
+%   }
+%   File searching can be carried out if the \tn{pdffilesize} primitive
+%   or an equivalent is available. That of course means we need to
+%   arrange for everything else to here to be done by expansion too.
+%   We start off by sanitizing the name and quoting if required: we
+%   may need to remove those quotes, so the raw name is passed too.
+%    \begin{macrocode}
+\cs_new:Npn \file_full_name:n #1
+  {
+    \exp_args:Ne \@@_full_name:n
+      { \__kernel_file_name_sanitize:n {#1} }
+  }
+\cs_new:Npn \@@_full_name:n #1
+  {
+    \exp_args:Ne \@@_full_name:nn
+      { \__kernel_file_name_quote:n {#1} } {#1}
+  }
+%    \end{macrocode}
+%   First, we check of the file is just here: no mapping so we do not
+%   need the break part of the broader auxiliary. We are using the fact
+%   that the primitive here returns nothing if the file is entirely absent.
+%   For package mode, \tn{input@path} is a token list not a sequence.
+%    \begin{macrocode}
+\cs_new:Npn \@@_full_name:nn #1#2
+  {
+    \int_compare:nNnTF { 0 \@@_file_size:n {#1} } = 0
+      {
+        \seq_map_tokens:Nn \l_file_search_path_seq
+          { \@@_full_name_aux:nn {#2} }
+%<*package>
+        \cs_if_exist:NT \input@path
+          {
+            \tl_map_tokens:Nn \input@path
+              { \@@_full_name_aux:nn {#2} }
+          }
+%</package>
+        \@@_file_name_end:
+      }
+      { \@@_file_ext_check:n {#1} }
+  }
+%    \end{macrocode}
+%   Two pars to the auxiliary here so we can avoid doing quoting
+%   twice in the event we find the right file.
+%    \begin{macrocode}
+\cs_new:Npn \@@_full_name_aux:nn #1#2
+  {
+    \exp_args:Ne \@@_full_name_aux:n
+      { \__kernel_file_name_quote:e { \tl_to_str:n {#2} #1 } }
+  }
+\cs_new:Npn \@@_full_name_aux:n #1
+  {
+    \int_compare:nNnF { 0 \@@_file_size:n {#1} } = 0
+      {
+        \seq_map_break:n
+          {
+            \@@_file_ext_check:n {#1}
+            \@@_file_name_cleanup:w
+          }
+      }
+  }
+\cs_new:Npn \@@_file_name_cleanup:w #1 \@@_file_name_end:n #2 { }
+\cs_new:Npn \@@_file_name_end: { }
+%    \end{macrocode}
+%   As \TeX{} automatically adds |.tex| if there is no extension,
+%   there is a little clean up to do here. First, find the file
+%   extension if present, ignoring any quotes and avoiding dots in
+%   the path.(The quoted name is retained for the common case that
+%   there is no additional work to do.)
+%    \begin{macrocode}
+\cs_new:Npn \@@_file_ext_check:n #1
+  { \@@_file_ext_check_auxi:nw {#1} #1 " #1 " \q_stop }
+\cs_new:Npn \@@_file_ext_check_auxi:nw #1#2 " #3 " #4 \q_stop
+  { \@@_file_ext_check_auxii:nw {#1} #3 / \q_nil / \q_stop }
+\cs_new:Npn \@@_file_ext_check_auxii:nw #1#2 / #3 / #4 \q_stop
+  {
+    \quark_if_nil:nTF {#3}
+      { \@@_file_ext_check_auxiii:nw {#1} #2 . \q_nil . \q_stop }
+      { \@@_file_ext_check_auxii:nw {#1} #3 / #4 \q_stop }
+  }
+\cs_new:Npx \@@_file_ext_check_auxiii:nw #1#2 . #3 . #4 \q_stop
+  {
+    \exp_not:N \quark_if_nil:nTF {#3}
+      { \exp_not:N \__kernel_file_name_quote:n { #1 \tl_to_str:n { .tex } } }
+      {#1}
+  }
+%    \end{macrocode}
+%   Deal with the fact that the primitive might not be available.
+%    \begin{macrocode}
+\bool_lazy_or:nnF
+  { \cs_if_exist_p:N \tex_filesize:D }
+  { \sys_if_engine_luatex_p: }
+  {
+    \cs_gset:Npn \file_full_name:n #1
+      {
+        \__kernel_msg_expandable_error:nnn
+          { kernel } { primitive-not-available }
+          { \(pdf)filesize }
+      }
+  }
+\__kernel_msg_new:nnnn { kernel } { primitive-not-available }
+  { Primitive~\token_to_str:N #1 not~available }
+  {
+    The~version~of~your~TeX~engine~does~not~provide~functionality~equivalent~to~
+    the~#1~primitive.
+  }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+%
 % \begin{macro}{\file_get_full_name:nN, \file_get_full_name:VN}
 % \begin{macro}[TF]{\file_get_full_name:nN, \file_get_full_name:VN}
 % \begin{macro}{\@@_get_full_name_search:nN}
-%   The way to test if a file exists is to try to open it: if it does
-%   not exist then \TeX{} reports end-of-file. A search is made
-%   looking at each potential path in turn (starting from the current
-%   directory). The first location is of course treated as the correct
-%   one: this is done by jumping to \cs{prg_break_point:}. If nothing
-%   is found, |#2| is returned empty. A special case when there is no
-%   extension is that once the first location is found we test the
-%   existence of the file with |.tex| extension in that directory, and
-%   if it exists we include the |.tex| extension in the result.
+%   These functions pre-date using \cs{tex_filesize:D} for file searching,
+%   so are |get| functions with protection. To avoid having different
+%   search set ups, they are simply wrappers around the code above.
 %    \begin{macrocode}
 \cs_new_protected:Npn \file_get_full_name:nN #1#2
   {
@@ -2457,43 +2609,66 @@
 \cs_generate_variant:Nn \file_get_full_name:nN { V }
 \prg_new_protected_conditional:Npnn \file_get_full_name:nN #1#2 { T , F , TF }
   {
-    \tl_set:Nx \l_@@_base_name_tl
-      { \__kernel_file_name_sanitize:n {#1} }
-    \@@_get_full_name_search:nN { } \use:n
-    \seq_map_inline:Nn \l_file_search_path_seq
-      { \@@_get_full_name_search:nN { ##1 / } \seq_map_break:n }
-%<*package>
-    \cs_if_exist:NT \input@path
-      {
-        \tl_map_inline:Nn \input@path
-          { \@@_get_full_name_search:nN { ##1 } \tl_map_break:n }
-      }
-%</package>
-    \tl_set:Nn \l_@@_full_name_tl { \q_no_value }
-    \prg_break_point:
-    \quark_if_no_value:NTF \l_@@_full_name_tl
-      {
-        \ior_close:N \g_@@_internal_ior
-        \prg_return_false:
-      }
-      {
-        \file_parse_full_name:VNNN \l_@@_full_name_tl
-          \l_@@_dir_str \l_@@_name_str \l_@@_ext_str
-        \str_if_empty:NT \l_@@_ext_str
-          {
-            \__kernel_ior_open:No \g_@@_internal_ior
-              { \l_@@_full_name_tl .tex }
-            \ior_if_eof:NF \g_@@_internal_ior
-              { \tl_put_right:Nn \l_@@_full_name_tl { .tex } }
-          }
-        \ior_close:N \g_@@_internal_ior
-        \tl_set_eq:NN #2 \l_@@_full_name_tl
-        \prg_return_true:
-      }
+    \tl_set:Nx #2
+      { \file_full_name:n {#1} }
+    \tl_if_empty:NTF #2
+      { \prg_return_false: }
+      { \prg_return_true: }
   }
 \cs_generate_variant:Nn \file_get_full_name:nNT  { V }
 \cs_generate_variant:Nn \file_get_full_name:nNF  { V }
 \cs_generate_variant:Nn \file_get_full_name:nNTF { V }
+%    \end{macrocode}
+%   If \cs{tex_filesize:D} is not available, the
+%   way to test if a file exists is to try to open it: if it does
+%   not exist then \TeX{} reports end-of-file. A search is made
+%   looking at each potential path in turn (starting from the current
+%   directory). The first location is of course treated as the correct
+%   one: this is done by jumping to \cs{prg_break_point:}. If nothing
+%   is found, |#2| is returned empty. A special case when there is no
+%   extension is that once the first location is found we test the
+%   existence of the file with |.tex| extension in that directory, and
+%   if it exists we include the |.tex| extension in the result.
+%    \begin{macrocode}
+\bool_lazy_or:nnF
+  { \cs_if_exist_p:N \tex_filesize:D }
+  { \sys_if_engine_luatex_p: }
+  {
+    \prg_set_protected_conditional:Npnn \file_get_full_name:nN #1#2 { T , F , TF }
+      {
+        \@@_get_full_name_search:nN { } \use:n
+        \seq_map_inline:Nn \l_file_search_path_seq
+          { \@@_get_full_name_search:nN { ##1 / } \seq_map_break:n }
+%<*package>
+        \cs_if_exist:NT \input@path
+          {
+            \tl_map_inline:Nn \input@path
+              { \@@_get_full_name_search:nN { ##1 } \tl_map_break:n }
+          }
+%</package>
+        \tl_set:Nn \l_@@_full_name_tl { \q_no_value }
+        \prg_break_point:
+        \quark_if_no_value:NTF \l_@@_full_name_tl
+          {
+            \ior_close:N \g_@@_internal_ior
+            \prg_return_false:
+          }
+          {
+            \file_parse_full_name:VNNN \l_@@_full_name_tl
+              \l_@@_dir_str \l_@@_name_str \l_@@_ext_str
+            \str_if_empty:NT \l_@@_ext_str
+              {
+                \__kernel_ior_open:No \g_@@_internal_ior
+                  { \l_@@_full_name_tl .tex }
+                \ior_if_eof:NF \g_@@_internal_ior
+                   { \tl_put_right:Nn \l_@@_full_name_tl { .tex } }
+              }
+            \ior_close:N \g_@@_internal_ior
+            \tl_set_eq:NN #2 \l_@@_full_name_tl
+            \prg_return_true:
+          }
+      }
+  }
 \cs_new_protected:Npn \@@_get_full_name_search:nN #1#2
   {
     \tl_set:Nx \l_@@_full_name_tl
@@ -2586,16 +2761,10 @@
             \tl_clear:N #3
             \__kernel_msg_error:nnx
               { kernel } { primitive-not-available }
-              { \exp_not:c { (pdf)file #2 } }
+              { \token_to_str:N \(pdf)file #2 }
             \prg_return_false:
           }
       }
-  }
-\__kernel_msg_new:nnnn { kernel } { primitive-not-available }
-  { Primitive~\token_to_str:N #1 not~available }
-  {
-    The~version~of~XeTeX~in~use~does~not~provide~functionality~equivalent~to~
-    the~\token_to_str:N #1 primitive.
   }
 %    \end{macrocode}
 % \end{macro}
