Close test stream

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2246,21 +2246,28 @@
   {
     \group_begin:
       \cs_set_eq:Nc \g_@@_internal_ior { g_ _file_internal_ior }
-      \cs_set_protected:Npn \@@_if_exist:nTF #1#2#3
+      \prg_set_protected_conditional:Npnn \@@_if_exist:nT #1
+        { T , F , TF }
         {
           \__kernel_ior_open:Nn \g_@@_internal_ior {#1}
-          \ior_if_eof:NTF \g_@@_internal_ior {#3} {#2}
+          \ior_if_eof:NTF \g_@@_internal_ior
+            {
+              \ior_close:N \g_@@_internal_ior
+              \prg_return_false:
+            }
+            {
+              \ior_close:N \g_@@_internal_ior 
+              \prg_return_true:
+            }
         }
       \@@_if_exist:nTF { nul: }
         {
-          \@@_if_exist:nTF { /dev/null }
-            { }
+          \@@_if_exist:nF { /dev/null }
             { \str_const:Nn \c_sys_platform_str { windows } }
         }
         {
-          \@@_if_exist:nTF { /dev/null }
+          \@@_if_exist:nT { /dev/null }
             { \str_const:Nn \c_sys_platform_str { unix } }
-            { }
         }
     \group_end:
   }
