--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2246,7 +2246,7 @@
   {
     \group_begin:
       \cs_set_eq:Nc \g_@@_internal_ior { g_ _file_internal_ior }
-      \prg_set_protected_conditional:Npnn \@@_if_exist:nT #1
+      \prg_set_protected_conditional:Npnn \@@_if_exist:n #1
         { T , F , TF }
         {
           \__kernel_ior_open:Nn \g_@@_internal_ior {#1}
