\pdffilesize should not be used with an empty argument

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -2505,20 +2505,23 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_full_name:nn #1#2
   {
-    \int_compare:nNnTF { 0 \@@_file_size:n {#1} } = 0
+    \tl_if_blank:nF {#1}
       {
-        \seq_map_tokens:Nn \l_file_search_path_seq
-          { \@@_full_name_aux:nn {#2} }
-%<*package>
-        \cs_if_exist:NT \input@path
+        \int_compare:nNnTF { 0 \@@_file_size:n {#1} } = 0
           {
-            \tl_map_tokens:Nn \input@path
+            \seq_map_tokens:Nn \l_file_search_path_seq
               { \@@_full_name_aux:nn {#2} }
-          }
+%<*package>
+            \cs_if_exist:NT \input@path
+              {
+                \tl_map_tokens:Nn \input@path
+                  { \@@_full_name_aux:nn {#2} }
+              }
 %</package>
-        \@@_file_name_end:
+            \@@_file_name_end:
+          }
+          { \@@_file_ext_check:n {#1} }
       }
-      { \@@_file_ext_check:n {#1} }
   }
 %    \end{macrocode}
 %   Two pars to the auxiliary here so we can avoid doing quoting
