Handle file/sys stream correctly
This doesn't actually cost a stream, only a csname,
so there is no real 'hit' in doing things the official way.

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2230,6 +2230,14 @@
 % \end{macro}
 % \end{macro}
 %
+% \begin{variable}{\g_@@_internal_ior}
+%   As noted below, we need a stream for checking for pseudo-files; to
+%   avoid engine variation, it is always created.
+%    \begin{macrocode}
+\ior_new:N \g_@@_internal_ior
+%    \end{macrocode}
+% \end{variable}
+%
 % \begin{variable}{\c_sys_platform_str}
 %   Detecting the platform on \LuaTeX{} is easy: for other engines, we use
 %   the fact that the two common cases have special null files. It is possible
@@ -2245,7 +2253,6 @@
   }
   {
     \group_begin:
-      \cs_set_eq:Nc \g_@@_internal_ior { g_ _file_internal_ior }
       \prg_set_protected_conditional:Npnn \@@_if_exist:n #1
         { T , F , TF }
         {
