--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -2189,13 +2189,6 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}{\g_@@_internal_ior}
-%   A reserved stream to test for file existence.
-%    \begin{macrocode}
-\ior_new:N \g_@@_internal_ior
-%    \end{macrocode}
-% \end{variable}
-%
 % \begin{variable}
 %   {
 %     \g_file_curr_dir_str ,
@@ -2714,6 +2707,15 @@
 % \end{macro}
 % \end{macro}
 % \end{macro}
+% \begin{variable}{\g_@@_internal_ior}
+%   A reserved stream to test for file existence, if required.
+%    \begin{macrocode}
+\bool_lazy_or:nnF
+  { \cs_if_exist_p:N \tex_filesize:D }
+  { \sys_if_engine_luatex_p: }
+  { \ior_new:N \g_@@_internal_ior }
+%    \end{macrocode}
+% \end{variable}
 %
 % \begin{macro}[rEXP]{\file_mdfive_hash:n, \file_size:n, \file_timestamp:n}
 % \begin{macro}[rEXP]{\@@_details:nn, \@@_details_aux:nn}
