\pdffilesize does work with pseudo-files
What's important is that for a non-existent file

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2230,21 +2230,11 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{variable}{\g_@@_internal_ior}
-%   As noted below, we need a stream for checking for pseudo-files; to
-%   avoid engine variation, it is always created.
-%    \begin{macrocode}
-\ior_new:N \g_@@_internal_ior
-%    \end{macrocode}
-% \end{variable}
-%
 % \begin{variable}{\c_sys_platform_str}
 %   Detecting the platform on \LuaTeX{} is easy: for other engines, we use
 %   the fact that the two common cases have special null files. It is possible
 %   to probe further (see package \pkg{platform}), but that requires shell
-%   escape and seems unlikely to be useful. As the test here is not using
-%   real files, we have to use a \enquote{raw} approach to checking for
-%   \enquote{files}.
+%   escape and seems unlikely to be useful.
 %    \begin{macrocode}
 \sys_if_engine_luatex:TF
   {
@@ -2252,31 +2242,15 @@
       { \lua_now:n { tex.print(os.type) } }
   }
   {
-    \group_begin:
-      \prg_set_protected_conditional:Npnn \@@_if_exist:n #1
-        { T , F , TF }
-        {
-          \__kernel_ior_open:Nn \g_@@_internal_ior {#1}
-          \ior_if_eof:NTF \g_@@_internal_ior
-            {
-              \ior_close:N \g_@@_internal_ior
-              \prg_return_false:
-            }
-            {
-              \ior_close:N \g_@@_internal_ior 
-              \prg_return_true:
-            }
-        }
-      \@@_if_exist:nTF { nul: }
-        {
-          \@@_if_exist:nF { /dev/null }
-            { \str_const:Nn \c_sys_platform_str { windows } }
-        }
-        {
-          \@@_if_exist:nT { /dev/null }
-            { \str_const:Nn \c_sys_platform_str { unix } }
-        }
-    \group_end:
+    \file_if_exist:nTF { nul: }
+      {
+        \file_if_exist:nF { /dev/null }
+          { \str_const:Nn \c_sys_platform_str { windows } }
+      }
+      {
+        \file_if_exist:nT { /dev/null }
+          { \str_const:Nn \c_sys_platform_str { unix } }
+      }
   }
 \cs_if_exist:NF \c_sys_platform_str
   { \str_const:Nn \c_sys_platform_str { unknown }  }
