dvisvgm can include EPS files
This is a straight copy from the dvips driver:
not sure why it got missed!

--- a/l3backend/l3backend-graphics.dtx
+++ b/l3backend/l3backend-graphics.dtx
@@ -557,6 +557,19 @@
 %<*dvisvgm>
 %    \end{macrocode}
 %
+% \begin{macro}{\@@_backend_getbb_eps:n}
+%   Simply use the generic function.
+%    \begin{macrocode}
+%<*initex>
+\use:n
+%</initex>
+%<*package>
+\AtBeginDocument
+%</package>
+  { \cs_new_eq:NN \@@_backend_getbb_eps:n \graphics_read_bb:n }
+%    \end{macrocode}
+% \end{macro}
+%
 % \begin{macro}{\@@_backend_getbb_png:n, \@@_backend_getbb_jpg:n}
 %   These can be included by extracting the bounding box data.
 %    \begin{macrocode}
@@ -569,6 +582,24 @@
   {
     \cs_new_eq:NN \@@_backend_getbb_png:n \graphics_extract_bb:n
     \cs_new_eq:NN \@@_backend_getbb_jpg:n \graphics_extract_bb:n
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\@@_backend_include_eps:n}
+%  The special syntax is relatively clear here: remember we need PostScript
+%  sizes here. (This is the same as the \texttt{dvips} code.)
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_include_eps:n #1
+  {
+    \__kernel_backend_literal:x
+      {
+        PSfile = #1 \c_space_tl
+        llx = \dim_to_decimal_in_bp:n \l_graphics_llx_dim \c_space_tl
+        lly = \dim_to_decimal_in_bp:n \l_graphics_lly_dim \c_space_tl
+        urx = \dim_to_decimal_in_bp:n \l_graphics_urx_dim \c_space_tl
+        ury = \dim_to_decimal_in_bp:n \l_graphics_ury_dim
+      }
   }
 %    \end{macrocode}
 % \end{macro}
