Correct bb extraction keys with dvisvgm

--- a/l3backend/l3backend-graphics.dtx
+++ b/l3backend/l3backend-graphics.dtx
@@ -573,15 +573,24 @@
 % \begin{macro}{\@@_backend_getbb_png:n, \@@_backend_getbb_jpg:n}
 %   These can be included by extracting the bounding box data.
 %    \begin{macrocode}
-%<*initex>
-\use:n
-%</initex>
-%<*package>
-\AtBeginDocument
-%</package>
+\cs_new_protected:Npn \@@_backend_getbb_jpg:n #1
   {
-    \cs_new_eq:NN \@@_backend_getbb_png:n \graphics_extract_bb:n
-    \cs_new_eq:NN \@@_backend_getbb_jpg:n \graphics_extract_bb:n
+    \int_zero:N \l_graphics_page_int
+    \tl_clear:N \l_graphics_pagebox_tl
+    \graphics_extract_bb:n {#1}
+  }
+\cs_new_eq:NN \@@_backend_getbb_png:n \@@_backend_getbb_jpg:n
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\@@_backend_getbb_pdf:n}
+%   Same as for \texttt{dvipdfmx}: use the generic function
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_getbb_pdf:n #1
+  {
+    \tl_clear:N \l_graphics_decodearray_tl
+    \bool_set_false:N \l_graphics_interpolate_bool
+    \graphics_extract_bb:n {#1}
   }
 %    \end{macrocode}
 % \end{macro}
